2011-02-02  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        A deleted object should never been bound again
        https://bugs.webkit.org/show_bug.cgi?id=53604

        * fast/canvas/webgl/object-deletion-behaviour-expected.txt:
        * fast/canvas/webgl/object-deletion-behaviour.html: Add test cases for object binding and deletion.
2011-02-02  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        A deleted object should never been bound again
        https://bugs.webkit.org/show_bug.cgi?id=53604

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::checkObjectToBeBound): Helper function to bind* and useProgram.
        (WebCore::WebGLRenderingContext::bindBuffer): Use checkObjectToBeBound.
        (WebCore::WebGLRenderingContext::bindFramebuffer): Ditto.
        (WebCore::WebGLRenderingContext::bindRenderbuffer): Ditto.
        (WebCore::WebGLRenderingContext::bindTexture): Ditto, also check the target matching.
        (WebCore::WebGLRenderingContext::deleteObject): Helper funtion to delete*.
        (WebCore::WebGLRenderingContext::deleteBuffer): Use deleteObject.
        (WebCore::WebGLRenderingContext::deleteFramebuffer): Ditto.
        (WebCore::WebGLRenderingContext::deleteProgram): Ditto.
        (WebCore::WebGLRenderingContext::deleteRenderbuffer): Ditto.
        (WebCore::WebGLRenderingContext::deleteShader): Ditto.
        (WebCore::WebGLRenderingContext::deleteTexture): Ditto.
        (WebCore::WebGLRenderingContext::useProgram): Use checkObjectToBeBound.
        * html/canvas/WebGLRenderingContext.h:
        * html/canvas/WebGLTexture.h:
        (WebCore::WebGLTexture::getTarget): Accessor to cached target.


Canonical link: https://commits.webkit.org/67501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77417 268f45cc-cd09-0410-ab3c-d52691b4dbfc